# nimbus-git

./: .gitignore  API.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  MCP_INTEGRATION.md  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yml
crates/nimbus-auth/: Cargo.toml
crates/nimbus-auth/src/: lib.rs
crates/nimbus-events/: Cargo.toml
crates/nimbus-events/src/: lib.rs  metrics.rs  tests.rs
crates/nimbus-git/: Cargo.toml
crates/nimbus-git/src/: lib.rs
crates/nimbus-types/: Cargo.toml
crates/nimbus-types/src/: events.rs  lib.rs
crates/nimbus-ui/: Cargo.toml  index.html
crates/nimbus-ui/src/: lib.rs  main.rs
crates/nimbus-ui/src/components/: mod.rs
crates/nimbus-ui/src/pages/: dashboard.rs  mod.rs  repo_detail.rs  repo_list.rs  settings.rs
crates/nimbus-web/: Cargo.toml
crates/nimbus-web/src/: lib.rs  main.rs
k8s/: deployment.yaml  ingress.yaml  namespace.yaml  owner-secret.yaml  pvc.yaml  service.yaml
scripts/: ci-local.sh  deploy.sh  init-password.sh  local-ci.sh
