[workspace]
resolver = "2"
members = [
    "crates/nimbus-types",
    "crates/nimbus-events",
    "crates/nimbus-git",
    "crates/nimbus-web",
    "crates/nimbus-auth",
    "crates/nimbus-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Ed Sweeney <ed@navicore.tech>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/navicore/nimbus-git"
rust-version = "1.82"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Web frameworks
warp = "0.3"
leptos = { version = "0.6" }
leptos_meta = { version = "0.6" }
leptos_router = { version = "0.6" }
leptos_axum = { version = "0.6" }

# Git libraries  
git2 = "0.18"
# gitoxide = "0.35" # Alternative pure Rust

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "time", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "json"] }

# Storage
aws-sdk-s3 = "1.17"
bytes = "1.5"

# Auth
jsonwebtoken = "9.2"
argon2 = "0.5"
uuid = { version = "1.7", features = ["v4", "serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
opentelemetry = "0.21"

# Utils
anyhow = "1.0"
thiserror = "1.0"
config = "0.13"
time = { version = "0.3", features = ["serde"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols for smaller binary
panic = "abort"     # Smaller panic handler

[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = "fat"