[package]
name = "nimbus-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nimbus-types = { path = "../nimbus-types" }

# Auth
jsonwebtoken.workspace = true
argon2.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utils
uuid.workspace = true
time.workspace = true

# Observability
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Kubernetes
kube.workspace = true
k8s-openapi.workspace = true
base64.workspace = true