[package]
name = "nimbus-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nimbus-types = { path = "../nimbus-types" }

# Async
tokio.workspace = true
async-trait.workspace = true

# Data structures
dashmap = "6.0"
arc-swap = "1.7"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Channels
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
async-channel = "2.1"

# Observability
tracing.workspace = true
prometheus.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utils
uuid.workspace = true
time.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
criterion = "0.5"

[[bench]]
name = "event_throughput"
harness = false