[package]
name = "nimbus-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nimbus-types = { path = "../nimbus-types" }
nimbus-events = { path = "../nimbus-events" }

# Git
git2.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Observability
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true