[package]
name = "nimbus-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
thiserror.workspace = true

# For WASM compatibility
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"